# raffish

./: .gitignore  README.md  small_excel.xlsx  small_excel_1_row.xlsx  small_excel_2_row.xlsx
app-backend-python/: note.md
app-backend-python/src/: app.py  config.py  processor.py  sprinklr.py
app-frontend-javascript/: excel_parser.js  index.html  submission.js
archive/: excel_parser_copy2.js
archive/excel-parser-frontend copy/: submission.js
archive/express-raffish-backend/: package.json
archive/raffish-app-with-css/: style.css
archive/test/: index.html
excel-parser-frontend/: excel_parser.js  index.html  style.css
excel-parser-frontend copy/: get_doc.js  index.html  test.js
express-raffish-backend/: note.md  package-lock.json  server.js
files/files_used_for_testing/: some_file.html
raffish-app/: index.html  package-lock.json  package.json
raffish-app-2/: index.html  note.md  script.js
raffish-app-with-css/: index.html  package.json  script.js  script_rough.js  style.css
raffish-backend-python/: note.md  pyproject.toml
raffish-backend-python/src/: app.py  config.py  excelapp.py  percolate.py  processor.py  read.py  sprinklr.py
raffish-excel-parser/: excel_parser.js  excel_parser_original.html  index.html  note.md
