[tool.poetry]
name = "raffish-backend-python"
version = "0.1.0"
description = "backend for raffish excel reader"
authors = ["SatyakiMallick"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
ciso8601 = "^2.3.1"
black = "^23.12.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
